--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,39 +1,68 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Livraria Digital</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Todos os Livros</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 
 <body>
+<div class="container my-2">
+    <div class="card">
+        <div class="card-body">
+            <div th:switch="${livros}" class="container my-5">
+                <p class="my-5">
+                    <a href="/edit" class="btn btn-primary">
+                        <i class="fas fa-user-plus ml-2"> Adicionar Livro </i></a>
+                </p>
+                <div class="col-md-10">
+                    <h2 th:case="null">Nenhum registro encontrado!</h2>
+                    <div th:case="*">
+                        <table class="table table-striped table-responsive-md">
+                            <thead>
+                            <tr>
+                                <th>ISBN</th>
+                                <th>Título</th>
+                                <th>Autor</th>
+                                <th>Ano</th>
+                                <th>Edição</th>
+                                <th>Editora</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="livro : ${livros}">
+                                <td th:text="${livro.getIsbn()}"></td>
+                                <td th:text="${livro.getTitulo()}"></td>
+                                <td th:text="${livro.getAutor()}"></td>
+                                <td th:text="${livro.getAno()}"></td>
+                                <td th:text="${livro.getEdicao()}"></td>
+                                <td th:text="${livro.getEditora()}"></td>
+<!--                                <td>-->
+<!--                                    <a th:href="@{/edit/{id}(id=${employee.id})}"-->
+<!--                                       class="btn btn-primary">-->
+<!--                                        <i class="fas fa-user-edit ml-2"></i>-->
+<!--                                    </a>-->
+<!--                                </td>-->
+<!--                                <td>-->
+<!--                                    <a th:href="@{/delete/{id}(id=${employee.id})}"-->
+<!--                                       class="btn btn-primary">-->
+<!--                                        <i class="fas fa-user-times ml-2"></i>-->
+<!--                                    </a>-->
+<!--                                </td>-->
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
 
-<header>
-    <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-O h1" style="font-weight: bold; font-palette: light">Livraria Digital</span>
-    </nav>
-</header>
-
-<!--<section>-->
-<!--    <div class="container" style="width: 60%; padding-bottom: 30px;">-->
-<!--        <nav aria-label="breadcrumb">-->
-<!--            <ol class="breadcrumb" style="background-color: white; padding-left: 0px;">-->
-<!--                <li class="breadcrumb-item active" aria-current="page">Posts</li>-->
-<!--            </ol>-->
-<!--        </nav>-->
-<!--        <div class="card shadow-sm bg-white rounded" style="margin-top: 20px;" th:each="post : ${posts}">-->
-<!--            <div class="card-body">-->
-<!--                <p class="card-subtitle mb-2 text-muted" style="font-size: 0.8rem;">-->
-<!--                    <span th:text="${post.autor}"></span>-->
-<!--                    <span th:text="${post.data}"></span>-->
-<!--                </p>-->
-<!--                <a th:href="${(#mvc.url('BC#getPostDetails').arg(0, post.id)).build()}"><h4 class="card-title" style="font-weight: bold; color: black; padding-top: 5px;"><span th:text="${post.titulo}"></span></h4></a>-->
-<!--                <p class="card-text"><span th:utext="${#strings.abbreviate(post.texto,400)} "></span></p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 
 </html>
