--- a/src/main/resources/templates/livros.html
+++ b/src/main/resources/templates/livros.html
@@ -16,7 +16,7 @@
         <div class="card-body">
             <div th:switch="${livros}" class="container my-5">
                 <p class="my-5">
-                    <a href="/edit" class="btn btn-primary">
+                    <a href="/novoLivro" class="btn btn-primary">
                         <i class="fas fa-user-plus ml-2"> Adicionar Livro </i></a>
                 </p>
                 <div class="col-md-10">
@@ -41,18 +41,18 @@
                                 <td th:text="${livro.getAno()}"></td>
                                 <td th:text="${livro.getEdicao()}"></td>
                                 <td th:text="${livro.getEditora()}"></td>
-<!--                                <td>-->
-<!--                                    <a th:href="@{/edit/{id}(id=${employee.id})}"-->
-<!--                                       class="btn btn-primary">-->
-<!--                                        <i class="fas fa-user-edit ml-2"></i>-->
-<!--                                    </a>-->
-<!--                                </td>-->
-<!--                                <td>-->
-<!--                                    <a th:href="@{/delete/{id}(id=${employee.id})}"-->
-<!--                                       class="btn btn-primary">-->
-<!--                                        <i class="fas fa-user-times ml-2"></i>-->
-<!--                                    </a>-->
-<!--                                </td>-->
+                                <td>
+                                    <a th:href="@{/edit/{id}(id=${livro.getId})}"
+                                       class="btn btn-primary">
+                                        <i class="fas fa-user-edit ml-2"></i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a th:href="@{/delete/{id}(id=${livro.getId})}"
+                                       class="btn btn-primary">
+                                        <i class="fas fa-user-times ml-2"></i>
+                                    </a>
+                                </td>
                             </tr>
                             </tbody>
                         </table>
