--- a/src/main/resources/templates/livroForm.html
+++ b/src/main/resources/templates/livroForm.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Add Employee</title>
+    <title>Adicionar Livro</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
@@ -12,35 +12,46 @@
 
 <body>
 <div class="container my-5">
-    <h3> Add Employee</h3>
+    <h3> Adicionar Livro</h3>
     <div class="card">
         <div class="card-body">
             <div class="col-md-10">
                 <form action="#" th:action="@{/novoLivro}" th:object="${livro}"
                       method="post">
                     <div class="row">
+                        <div class="col-md-6">
+                            <input type="submit" class="btn btn-primary" value=" Enviar ">
+                        </div>
                         <div class="form-group col-md-8">
                             <label for="isbn" class="col-form-label">ISBN</label>
                             <input type="text" th:field="*{isbn}" class="form-control"
                                    id="isbn" placeholder="ISBN" />
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="name" class="col-form-label">Last Name</label>
-                            <input type="text" th:field="*{lastName}" class="form-control"
-                                   id="lastName" placeholder="Last Name" />
+                            <label for="titulo" class="col-form-label">Título</label>
+                            <input type="text" th:field="*{titulo}" class="form-control"
+                                   id="titulo" placeholder="Título" />
                         </div>
                         <div class="form-group col-md-8">
-                            <label for="email" class="col-form-label">Email</label>
-                            <input type="text" th:field="*{email}" class="form-control"
-                                   id="email" placeholder="Email Id" />
+                            <label for="autor" class="col-form-label">Autor</label>
+                            <input type="text" th:field="*{autor}" class="form-control"
+                                   id="autor" placeholder="Autor" />
                         </div>
-
-                        <div class="col-md-6">
-                            <input type="submit" class="btn btn-primary" value=" Submit ">
+                        <div class="form-group col-md-8">
+                            <label for="ano" class="col-form-label">Ano</label>
+                            <input type="text" th:field="*{ano}" class="form-control"
+                                   id="ano" placeholder="Ano" />
                         </div>
-
-                        <input type="hidden" id="id" th:field="*{id}">
-
+                        <div class="form-group col-md-8">
+                            <label for="edicao" class="col-form-label">Edição</label>
+                            <input type="text" th:field="*{edicao}" class="form-control"
+                                   id="edicao" placeholder="Edição" />
+                        </div>
+                        <div class="form-group col-md-8">
+                            <label for="editora" class="col-form-label">Editora</label>
+                            <input type="text" th:field="*{editora}" class="form-control"
+                                   id="editora" placeholder="Editora" />
+                        </div>
                     </div>
                 </form>
             </div>
