--- a/src/main/resources/templates/livros.html
+++ b/src/main/resources/templates/livros.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+<header>
+    <nav class="navbar navbar-light bg-light">
+        <span class="navbar-brand mb-O h1" style="font-weight: bold;">Livraria Digital</span>
+    </nav>
+</header>
 <div class="container my-2">
     <div class="card">
         <div class="card-body">
